# course-api

./: .gitignore  LICENSE  Makefile  README.md  make.bat  pyproject.toml  requirements.txt  run.py  start.bat  start.sh  test_asr_service.py  test_command_recognition.py  test_russian_commands.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  router.py
app/models/: __init__.py  game_models.py
app/services/: asr_service.py  command_service.py  game_state.py  whisper_online.py
app/websocket/: __init__.py  ws_handler.py
docs/source/: conf.py  index.rst
prompts/: base_commands.json  combat_commands.json  dialog_commands.json  movement_commands.json  object_interactions.json
tests/: test_command_recognition.py
