[project]
name = "game-asr-api"
version = "0.1.0"
description = "A FastAPI application that combines real-time speech recognition with game command recognition"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "aiohttp==3.9.3",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "websockets==12.0",
    "numpy==1.26.3",
    "httpx==0.26.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "requests",
    "librosa",
    "soundfile",
    "ruff>=0.11.10",
    "faster-whisper",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "sphinx>=7.3.7",
    "sphinx-autoapi>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
